Fix some layout issues

--- a/src/main/webapp/components/Dialog.less
+++ b/src/main/webapp/components/Dialog.less
@@ -65,5 +65,7 @@ div.Dialog
 				      border: none;
 				      padding: 0px;
 				      flex-grow: 1; }
+
+			   > iframe { overflow: hidden }
 	}
 }
