--- a/src/main/webapp/components/Fieldset.less
+++ b/src/main/webapp/components/Fieldset.less
@@ -172,11 +172,12 @@ fieldset
 					     white-space: pre-line;}
 
 
-				> label { flex-grow: 1;
-					  padding: 4px;
-					  text-indent: 0;
-					  line-height: 16px;
-					  white-space: normal;}
+				> label {  padding: 4px;
+					   flex-grow: 1;
+					   overflow: auto;
+					   text-indent: 0;
+					   line-height: 16px;
+					   white-space: normal; }
 			}
 
 			> input[type="file"],
